Sat Nov 14 02:34:43 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_define_method): do not use current CREF immediately,
	  but check CREF in environment or methods. Methods defined in methods
	  should be public.
	  [Bug #11571]

	* vm_method.c (rb_scope_module_func_check): check CREF in env or me.
	  if CREF is contained by `me', then return FALSE.

	* test/ruby/test_method.rb: add a test.

Sat Nov 14 02:19:16 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: constify rb_cref_t::scope_visi;

	* eval_intern.h (CREF_SCOPE_VISI_COPY): catch up this fix.

	* vm_method.c: ditto.

Sat Nov 14 01:53:52 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* pack.c (pack_unpack, AVOID_CC_BUG): Very ugly workaround for
	  optimization bug of Oracle Solaris Studio 12.4 on Solaris
	  with -xO4 optimization option. [Bug #11684]

Fri Nov 13 23:00:23 2015  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* configure.in: unset LD_PRELOAD on mingw. msys2 child processes
	  crash at make test-all with LD_PRELOAD.
	  [ruby-core:71461] [Bug #11680]

Fri Nov 13 14:00:43 2015  Zachary Scott  <zzak@ruby-lang.org>

	* ext/openssl/ossl_pkey.c: Merge ruby/openssl@b9ea8ef [Bug #10735]

Fri Nov 13 13:09:16 2015  Zachary Scott  <zzak@ruby-lang.org>

	* ext/openssl/ossl_ssl.c: Merge ruby/openssl@81e1a30

	* test/openssl/test_ssl.rb: ditto

Fri Nov 13 13:05:37 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* prelude.rb (Thread.exclusive): warn as deprecated.

Fri Nov 13 10:36:39 2015  Victor Nawothnig  <Victor.Nawothnig@gmail.com>

	* parse.y (new_unless): optimize constant condition for `unless`
	  as well as `if`.  [Fix GH-1092]

Fri Nov 13 10:08:41 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/psych.gemspec: bump version to 2.0.15

Thu Nov 12 18:44:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_magic_comment): should match exactly.
	  [ruby-core:71460] [Bug #11679]

Thu Nov 12 16:16:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
